# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  www-gov-uk.html  www-gov-uk.html(1).html
.github/workflows/: linter.yml  test_cov.yml  tests.yml
cr_files/: ru-hexlet-io-courses.html  www-gov-uk-asd.html  www-gov-uk-asd.html(1).html  www-gov-uk-asd.html(2).html  www-gov-uk-asd.html(3).html  www-gov-uk.html  www-gov-uk.html(1).html  www-gov-uk.html(2).html  www-gov-uk.html(3).html
cr_files/www-gov-uk_files/: www-gov-uk-
cr_files/www-gov-uk_files(4)/: www-gov-uk-  www-gov-uk-assets-frontend-application-09c3dc6c336613d508551e61498563c9c323ded6473db338c3b8c5b5bd1a2ae4.css  www-gov-uk-assets-frontend-application-13cb4b35de9a295e05527c1a38efdd2f0ff7080b7b5694043595762e9423e8e3.js
das/: www-gov-uk(1).html  www-gov-uk(2).html  www-gov-uk.html
das/www-gov-uk_files(1)/: www-gov-uk-
das/www-gov-uk_files(2)/: www-gov-uk-assets-frontend-application-b9c704177368bb0d653bb22c87ac329389527598b4e7e32a5faa3a715df837c0.css
page_loader/: cli.py  names_and_url_parsers.py  page_loader.py  refactors.py  rename.py  renamers.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses_fixture.html  some.html
