[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LilDrugHill <smookigrow@icloud.com>"]
packages = [{ include = "page_loader" },]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.4"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
